--- a/Client/SAP-contact_list.css
+++ b/Client/SAP-contact_list.css
@@ -70,9 +70,8 @@ button {
   margin-top: 10px;
   max-height: 250px; /* Scrollable list */
   overflow-y: auto;
-  border: 1px solid #ddd;
   padding: 10px;
-  background: #fafafa;
+  background: none;
 }
 
 .contact-item {
@@ -84,8 +83,21 @@ button {
   font-size: 14px;
 }
 
+/* .contact-item:last-child {
+  border-bottom: none;
+} */
+
+
+.contact-item img {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
 /* Contact Actions */
-.contact-actions button {
+.contact-actions {
+  display: flex;
   background: none;
   font-size: 12px;
   padding: 5px;
@@ -94,6 +106,13 @@ button {
   cursor: pointer;
   text-transform: uppercase;
   font-weight: bold;
+}
+
+.contact-actions button {
+  width: 40px;
+  height: 40px;
+  background-size: 40px;
+  background-repeat: no-repeat;
 }
 
 .contact-actions button.edit {
@@ -110,6 +129,7 @@ button {
 
 .contact-actions button.delete:hover {
   color: #a71d2a;
+  transform: scale(1.1);
 }
 
 /* Edit Section */
@@ -139,25 +159,6 @@ button {
   }
 }
 
-/* New Contact Form Buttons */
-.contact-actions button {
-  background-color: #007BFF;
-  color: white;
-  border: none;
-  margin: 5px;
-  font-size: 14px;
-  cursor: pointer;
-  text-transform: uppercase;
-  font-weight: bold;
-  transition: background-color 0.3s ease-in-out;
-}
-
-
-.contact-actions button:hover {
-  background: #0056b3;
-}
-
-
 /* Header Actions */
 .header-actions {
   display: flex;
@@ -174,14 +175,14 @@ header {
 }
 
 /* Existing styles for .add-contact button */
-.add-contact {
+.add-contact-button {
   background-color: #007BFF; /* Set background color */
   background-image: url("../DATA/icons8-plus-128.png");
-  background-size: 40px;
+  background-size: 50px;
   background-repeat: no-repeat;
   background-position: center;
-  width: 40px;
-  height: 40px; 
+  width: 50px;
+  height: 50px; 
   color: white;
   border-radius: 30px;
   padding: 10px;
