--- a/Client/SAP-contact_list.css
+++ b/Client/SAP-contact_list.css
@@ -11,6 +11,7 @@ body {
   justify-content: flex-start;
   min-height: 100vh;
 }
+
 /* Container */
 .container {
   background: none; /* Remove background */
@@ -25,7 +26,7 @@ body {
 /* Navigation Bar */
 nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: right;
   width: 100%;
   max-width: 100%;
   margin-bottom: 20px;
@@ -33,14 +34,13 @@ nav {
   padding-bottom: 10px;
 }
 
-
 /* Hidden Sections */
 .hidden {
   display: none;
 }
 
 /* Form Styles */
-input[type="text"] {
+input[type="text"], input[type="email"] {
   width: 100%;
   padding: 10px;
   margin: 10px 0;
@@ -52,11 +52,12 @@ input[type="text"] {
 
 /* Button Styling */
 button {
-  width: 100%;
+  width: 30%;
   padding: 10px;
   background: #007BFF;
   color: white;
   border: none;
+  border-radius: 5px;
   margin: 5px;
   font-size: 14px;
   cursor: pointer;
@@ -69,14 +70,30 @@ button:hover {
   transform: scale(1.1);
 }
 
+/* Contact Headers */
+.contact-headers {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  font-weight: bold;
+  border-bottom: 2px solid #ddd;
+}
+
+.contact-headers span {
+  flex: 1;
+  text-align: center;
+}
 
 /* Contact List */
 #contactList {
   margin-top: 10px;
-  max-height: 250px; /* Scrollable list */
+  max-height: 50%; /* Scrollable list */
+  height: 436px;
   overflow-y: auto;
   padding: 10px;
   background: none;
+  /* removing the default scrollbar */
+  scrollbar-width: none;
 }
 
 .contact-item {
@@ -88,10 +105,10 @@ button:hover {
   font-size: 14px;
 }
 
-/* .contact-item:last-child {
-  border-bottom: none;
-} */
-
+.contact-item span {
+  flex: 1;
+  text-align: center;
+}
 
 .contact-item img {
   width: 70px;
@@ -120,7 +137,6 @@ button:hover {
   background-repeat: no-repeat;
 }
 
-
 /* Responsive Design */
 @media (max-width: 500px) {
   .container {
@@ -140,10 +156,12 @@ button:hover {
 /* Header Actions */
 .header-actions {
   display: flex;
-  align-items: center;
+  align-items: start;
   justify-content: flex-end;
   gap: 10px; /* Add some space between the text and the button */
 }
+
+
 
 header {
   display: flex;
@@ -155,7 +173,7 @@ header {
 /* Existing styles for .add-contact button */
 .add-contact-button {
   background-color: #007BFF; /* Set background color */
-  background-image: url("../DATA/icons8-plus-128.png");
+  background-image: url("../Client/media/icons8-plus-128.png");
   background-size: 50px;
   background-repeat: no-repeat;
   background-position: center;
