--- a/Client/auth-forms.css
+++ b/Client/auth-forms.css
@@ -1,7 +1,7 @@
 /* General Styles */
 body {
   font-family: 'Arial', sans-serif;
-  background-color: #f5f5dc; /* Cream color */
+  background-color: rgb(255, 242, 242); /* Cream color */
   color: #333;
   margin: 0;
   padding: 0;
@@ -14,7 +14,7 @@ body {
 
 /* Form Styles */
 input[type="text"], input[type="email"], input[type="password"] {
-  width: 100%;
+  width: 95%;
   padding: 10px;
   margin: 10px 0;
   border: 1px solid #333;
@@ -27,7 +27,7 @@ input[type="text"], input[type="email"], input[type="password"] {
 
 /* Form Container */
 .form-container {
-  background: white;
+  background: rgb(255, 255, 255);
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
