--- a/Client/SAP-contact_list.css
+++ b/Client/SAP-contact_list.css
@@ -209,3 +209,11 @@ header {
   font-weight: bold;
   transition: background-color 0.3s ease-in-out;
 }
+
+
+.search-bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
