--- a/Client/SAP-contact_list.css
+++ b/Client/SAP-contact_list.css
@@ -217,6 +217,31 @@ header {
 }
 
 
+.retry-container {
+  display: flex;
+  height: 20px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+
+/* loader animation */
+.loader {
+  border: none;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 1.5s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+
+
+
 .search-bar {
   display: flex;
   justify-content: center;
