--- a/Client/SAP-contact_list.css
+++ b/Client/SAP-contact_list.css
@@ -110,6 +110,10 @@ button:hover {
 /* Contact List */
 #contactList {
   margin-top: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  width: 100%;
+  background: #D5C7A3 !important; /* the !important is used to override the default background */
   max-height: 50%; /* Scrollable list */
   height: 436px;
   overflow-y: auto;
