--- a/Client/SAP-contact_list.css
+++ b/Client/SAP-contact_list.css
@@ -76,7 +76,7 @@ input[type="text"], input[type="email"], input[type="password"] {
 button {
   width: 50%;
   padding: 10px;
-  background: #007BFF;
+  background: navy;
   color: white;
   border: none;
   border-radius: 5px;
@@ -96,8 +96,8 @@ button:hover {
 /* Contact Headers */
 .contact-headers {
   display: grid;
-  width: 80%;
-  grid-template-columns: 1fr 1fr 1fr auto; /* 3 columns and auto for actions */
+  width: 100%; /* Full width */
+  grid-template-columns: 3fr 1fr 3fr auto; /* 3 columns and auto for actions */
   padding: 10px;
   font-weight: bold;
   border-bottom: 2px solid #ddd;
@@ -112,9 +112,7 @@ button:hover {
   margin-top: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
-  width: 100%;
-  /* linear gradient background to the buttom */
-
+  width: 100%; /* Full width */
   background: #D5C7A3 !important; /* Gradient background */
   max-height: 50%; /* Scrollable list */
   height: 436px;
@@ -126,21 +124,39 @@ button:hover {
 }
 
 .contact-item {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr auto; /* 3 columns and auto for actions */
+  display: flex;
+  justify-content: space-between; /* Space between items */
   align-items: center;
   padding: 10px;
   border-bottom: 1px solid #ddd;
   font-size: 14px;
+  width: 100%; /* Full width */
+}
+
+.contact-info {
+  display: grid;
+  grid-template-columns: 3fr 1fr 3fr auto; /* 1 column for the image and 3 columns for the text */
+  align-items: center;
+  gap: 10px;
 }
 
 .contact-item span {
   text-align: center;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  padding: 10px;
+  background: #dbd0b5;
+  color: #333;
+  font-weight: bold;
+  font-size: 14px;
+  width: auto;
+  white-space: nowrap;
+  text-align: center;
 }
 
 .contact-item img {
-  width: 70px;
-  height: 70px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   margin-right: 10px;
 }
@@ -159,11 +175,18 @@ button:hover {
   font-weight: bold;
 }
 
+.contact-actions {
+  display: flex;
+  gap: 5px;
+}
+
 .contact-actions button {
-  width: 40px;
-  height: 40px;
-  background-size: 40px;
+  width: 30px;
+  height: 30px;
+  background-size: 30px;
   background-repeat: no-repeat;
+  position: relative;
+  overflow: hidden;
 }
 
 /* Responsive Design */
@@ -181,6 +204,7 @@ button:hover {
       font-size: 14px;
   }
 }
+
 
 /* Header Actions */
 .header-actions {
@@ -216,12 +240,10 @@ header {
   transition: background-color 0.3s ease-in-out;
 }
 
-
 .retryButton {
-  /* make the butten unclickable */
+  /* make the button unclickable */
   pointer-events: none;
 }
-
 
 .retry-container {
   display: flex;
@@ -244,9 +266,6 @@ header {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
-
-
-
 
 .search-bar {
   display: flex;
