--- a/Client/CSS/SAP-contact_list.css
+++ b/Client/CSS/SAP-contact_list.css
@@ -125,6 +125,16 @@ button:hover {
   overflow-x: hidden;
 }
 
+/* a text to show when the list is empty */
+.empty-list {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  font-size: 24px;
+  color: #333;
+}
+
 .contact-item {
   display: grid;
   grid-template-columns: auto 1fr 1fr 1fr auto; /* 3 columns and auto for actions */
@@ -234,7 +244,7 @@ header {
 /* Existing styles for .add-contact button */
 .add-contact-button {
   background-color: navy; /* Set background color */
-  background-image: url("../Client/media/icons8-plus-128.png\ white.png");
+  background-image: url("../media/icons8-plus-128_white.png");
   background-size: 50px;
   background-repeat: no-repeat;
   background-position: center;
